risc0/zirgen/dsl/test/repro/array_of_bad_range_expr.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:

component Foo(arr: Array<Va..63>) {
  arr[1];
}

